fixing the horizontal scrollbar on screen when less than 768

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 html{
   overflow: auto;
 }
@@ -53,7 +52,6 @@ h1{
   width: 100%;
   padding-bottom: 100px;
   min-height: 100%;
-  /*overflow: auto;*/
   position: relative;
 }
 
@@ -61,10 +59,7 @@ h1{
   margin: 0 auto;
   width: 960px;
   min-height: 100%;
-  overflow: auto;
-  clear: both;
   position: relative;
-
 }
 
 #main-section{
@@ -84,13 +79,13 @@ h1{
   float: right;
   padding: 30px 30px;
   width: 210px;
-  height: 140px;
+  height: auto;
   margin: 40px 0px 40px 40px;
   background-color: #ffffff;
 }
 
 #media-icons-section{
-  margin: 25px 0;
+  margin-top: 25px;
 }
 
 a{
@@ -275,7 +270,6 @@ textarea{
     width: 100%;
     height: auto;
   }
-
 }
 
 @media screen and (max-width: 768px) {
@@ -293,6 +287,7 @@ textarea{
   }
 
   #side-section{
+    box-sizing: border-box;
     width: 100%;
     margin-left:0;
     float: left;
@@ -309,12 +304,11 @@ textarea{
   .project{
     width:48%;
     height: auto;
-    position: relative;
     padding:0 auto;
   }
 
   .project-right{
-    flo right;
+    float: right;
   }
 
   .project-image{
@@ -330,7 +324,6 @@ textarea{
 
  #content-section{
     width: 95%;
-    overflow: auto;
   }
 
   #main-section{
